--- a/Core/packages.config
+++ b/Core/packages.config
@@ -5,6 +5,10 @@
   <package id="Autofac.Extras.DynamicProxy" version="7.1.0" targetFramework="net472" />
   <package id="Castle.Core" version="5.1.1" targetFramework="net472" />
   <package id="FluentValidation" version="11.7.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.32" targetFramework="net472" />
@@ -19,14 +23,22 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="3.1.32" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
+  <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
